If the "justified" prop is set to false, it will no longer adding "white-space: nowrap" style for table rows and cells

--- a/src/table.styl
+++ b/src/table.styl
@@ -82,27 +82,6 @@
     }
 }
 
-.table-extend-column-width {
-    .table {
-        > .thead,
-        > .tbody,
-        > .tfoot {
-            > .tr {
-                white-space: nowrap;
-            }
-        }
-        > .tbody {
-             > .tr {
-                > .td {
-                    > .td-content {
-                        white-space: nowrap;
-                    }
-                }
-            }
-        }
-    }
-}
-
 .tr-expand {
     border-bottom: 1px solid $table-border-color;
     white-space: normal;
